--- a/bibliography.bib
+++ b/bibliography.bib
@@ -97,7 +97,7 @@ year={2015}
 @article{TECS,
  author = {Pajic, M. and Jiang, Z. and Lee, I. and Sokolsky, O. and Mangharam, R.},
  title = {Safety-critical Medical Device Development Using the UPP2SF Model Translation Tool},
- journal = {ACM Trans. Embed. Comput. Syst.},
+ journal = {ACM Transactions on Embedded Computing Systems},
  volume = {13},
  number = {4s},
  year = {2014},
@@ -132,7 +132,7 @@ year={2015}
 @article{Abstraction,
 	Author = {E. M. Clarke and O. Grumberg and D. E. Long},
 	Issue_Date = {Sept. 1994},
-	Journal = {ACM Trans. Program. Lang. Syst.},
+	Journal = {ACM Transactions on Programming Languages and Systems},
 	Number = {5},
 	Pages = {1512--1542},
 	Title = {{Model Checking and Abstraction}},
@@ -168,7 +168,7 @@ year={2015}
 @article{CEGAR,
 	Author = {Clarke, E. and Grumberg, O. and Jha, S. and Lu, Y. and Veith, H.},
 	Issue_Date = {September 2003},
-	Journal = {J. ACM},
+	Journal = {Journal of the ACM},
 	Number = {5},
 	Pages = {752--794},
 	Title = {{Counter Example-Guided Abstraction Refinement for Symbolic Model Checking}},
@@ -506,7 +506,7 @@ year = {2014},
 @article{Bogdan,
  author = {Bogdan, P. and Jain, S. and Marculescu, R.},
  title = {Pacemaker Control of Heart Rate Variability: A Cyber Physical System Perspective},
- journal = {ACM Trans. Embed. Comput. Syst.},
+ journal = {ACM Transactions on Embedded Computing Systems},
  volume = {12},
  number = {1s},
  year = {2013},
@@ -515,7 +515,7 @@ year = {2014},
 @article{fiber,
 author="{E.W. Hsu and C.S. Henriquez}",
 title="{Myocardial fiber orientation mapping using reduced-encoding diffusion tensor imaging}",
-journal={J Cardiovascular Magn Reson},
+journal={Journal of Cardiovascular Magnetic Resonance},
 year={2011},
 volume={3},
 number={4},
@@ -599,7 +599,7 @@ author = "Taolue Chen and Marco Diciolla and Marta Kwiatkowska and Alexandru Mer
 
 @article{med2,
 	Author = {J. Beaumont and D. C. Michaels and M. Delmar and J. Davidenko and J. Jalife},
-	Journal = {Am. J. Physiol. 268 (Heart Circ Physiol. 37)},
+	Journal = {American Journal of Physiology. 268},
 	Title = {{A Model Study of Changes in Excitability of Ventricular Muscle Cells}},
 	Year = {1995}}
 
@@ -624,7 +624,7 @@ pages={323-336},
  author = {Islam, Md. A. and Murthy, A. and Girard, A. and Smolka, S. A. and Grosu, R.},
  title = {Compositionality Results for Cardiac Cell Dynamics},
  booktitle = {Proceedings of the 17th International Conference on Hybrid Systems: Computation and Control},
- series = {HSCC '14},
+ series = {(HSCC '14)},
  year = {2014},
  pages = {243--252},
 } 
@@ -895,7 +895,7 @@ pages={396-411},
 
 @inproceedings{vhm_ecrts10,
 	Author = {Z. Jiang and Pajic, M. and Connolly, A. and Dixit, S. and Mangharam, R.},
-	Booktitle = {Real-Time Systems (ECRTS), 2010 22nd Euromicro Conference on},
+	Booktitle = {2010 22nd Euromicro Conference on Real-Time Systems (ECRTS)},
 	Month = {July},
 	Pages = {239 -248},
 	Title = {Real-Time Heart Model for Implantable Cardiac Device Validation and Verification},
@@ -926,7 +926,8 @@ pages={396-411},
 
 @inproceedings{vhm_embc11,
 	Author = {Jiang, Z. and Mangharam, R.},
-	Booktitle = {Engineering in Medicine and Biology Society,EMBC, 2011 Annual International Conference of the IEEE},
+	Booktitle = {2011 Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)
+},
 	Month = {Sept},
 	Pages = {263 -266},
 	Title = {{Modeling Cardiac Pacemaker Malfunctions with the Virtual Heart Model}},
@@ -1030,7 +1031,7 @@ pages={396-411},
 	Year = {2006}}
 
 @misc{stateflow,
-	author = {Mathworks, Inc.},
+	author = {Mathworks Inc.},
 	Howpublished = {{http://www.mathworks.com/help/toolbox/stateflow}},
 	Title = {{Matlab R2011a Stateflow Documentation}},
 	Year = {2016}}
