--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[openany]{now} % creates the journal version
+\documentclass{now} % creates the journal version
 % \documentclass{now}  % creates the book pdf version
 
 % the now document class sets various dimensions, so be sure to *not* set
@@ -100,6 +100,7 @@ Through automatic model translation of abstract models to simulation-based testi
 
 
 
+\renewcommand{\bibname}{References}
 
 \bibliographystyle{plainnat}
 \bibliography{bibliography}
